리팩토링 중 주식 화면 오류 수정, 로그아웃 오류 수정